# declarative_type_state

./: Cargo.toml
src/: delegated_enum.rs  enum_delegate_impls.rs  enum_variants_convert.rs  enum_variants_table.rs  extract_single_variant.rs  extract_variants.rs  extract_variants_into_enum.rs  lib.rs  newtype_table.rs  transition_result.rs  type_state_enum.rs  type_table.rs  type_value_table.rs  unit_enum_delegate_impls.rs  unit_enum_delegated.rs  unit_enum_variants_convert.rs
